fix background-size in 992, add 768, fix letter-spacing

--- a/app/scss/index/_network.scss
+++ b/app/scss/index/_network.scss
@@ -94,7 +94,7 @@
   }
   &__name {
     font-size: 18px;
-    letter-spacing: normal;
+  //  letter-spacing: normal;
   }
 }
 
@@ -106,6 +106,7 @@
       padding-bottom: 0;
       &::before {
         background-image: url('../images/network/world-map-tab.svg');
+        background-size: cover;
       }
     }
     &__inner {
@@ -134,11 +135,19 @@
   .countries {
     &__inner {
       padding: 0 17px;
-      gap: 12px 12px;
     } 
   }
 }
+@media (max-width: 768px)  {
+  .network {
+    &__wrapper{
+      &::before {
+        background-size: contain;
+      }
+    }
 
+  }
+}
 @media (max-width: 576px) {
   .network {
     padding-bottom: 80px;
